@@ -1,6 +1,6 @@
 Package: kinship
-Version: 1.1.0-8
-Date: 2005-4-21
+Version: 1.1.0-9
+Date: 2005-5-26
 Title: mixed-effects Cox models, sparse matrices, and modeling data from large pedigrees
 Author: Beth Atkinson (atkinson@mayo.edu) for pedigree
         functions. Terry Therneau (therneau@mayo.edu) for all other functions.
@@ -27,4 +27,4 @@ License: Copyright 2003 Mayo Foundation for Medical Education and
         For other licensing arrangements, please contact Terry
         Therneau, Ph.D. Division of Biostatistics Mayo Clinic
         200 First St., SW Rochester, MN 55905 email: therneau@mayo.edu
-Packaged: Thu Apr 21 17:54:49 2005; jzhao
+Packaged: Thu May 26 10:18:05 2005; jzhao
