@@ -28,6 +28,7 @@
 07/03/2005 add c6 to coxfit6.h
 21/03/2005 move tests into inst
 21/04/2005 update according to kinship_S.1.2.tar.gz
+24/05/2005 fix formals in coxme.fit according to Anissa Alfakir, add coxph.wtest and rearrange c6 in coxfit6.h
 
 1. documented or obvious
 
